--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mygrate last && mygrate migrations/test.sql"
   },
   "author": "",
   "license": "BSD-2-Clause"
